# profile.mobile.platform.core.security.cert-checker

./: .gitignore  CMakeLists.txt  project.config
db/: CMakeLists.txt  cert-checker.sql  cert-checker.xml
docs/UML-Designer/: .project  model.uml  representations.aird
packaging/: cert-checker-tests.manifest.in  cert-checker.manifest  cert-checker.manifest.in  cert-checker.spec
pkgconfig/: CMakeLists.txt  cert-checker.pc.in
src/: .logic.cpp.swp  CMakeLists.txt  app.cpp  cert-checker.cpp  certs.cpp  logic.cpp  queue.cpp
src/client/: CMakeLists.txt  error.h  ocsp-client.cpp  ocsp-client.h  ocsp.cpp
src/common/: CMakeLists.txt  binary-queue.cpp  binary-queue.h  command-id.h  connection.cpp  connection.h  dispatcher.cpp  dispatcher.h  eventfd.cpp  eventfd.h  log.cpp  log.h  mainloop.cpp  mainloop.h  serialization.h  service.cpp  service.h  socket.cpp  socket.h  timer.cpp  timer.h  types.h
src/db/: sql_query.cpp  sql_query.h
src/dpl/core/include/cchecker/dpl/: assert.h  char_traits.h  colors.h  errno_string.h  exception.h  noncopyable.h  optional.h  scoped_array.h  scoped_free.h  scoped_resource.h  serialization.h  string.h
src/dpl/core/src/: assert.cpp  char_traits.cpp  colors.cpp  errno_string.cpp  exception.cpp  noncopyable.cpp  serialization.cpp  string.cpp
src/dpl/db/include/cchecker/dpl/db/: naive_synchronization_object.h  sql_connection.h
src/dpl/db/include/dpl/db/: sql_connection.h
src/dpl/db/src/: naive_synchronization_object.cpp  sql_connection.cpp
src/include/: CMakeLists.txt  app.h  logic.h
src/include/cchecker/: .logic.h.swp  UIBackend.h  app.h  certs.h  error.h  logic.h  ocsp.h  popup-runner.h  queue.h  sql_query.h
src/log/: log.h
src/main/: cert-checker.cpp
src/po/: CMakeLists.txt  en.po  en_GB.po  pl.po
src/service/: app.cpp  app.h  certs.cpp  certs.h  logic.cpp  logic.h  ocsp-service.cpp  ocsp-service.h  queue.cpp  queue.h
src/ui/: CMakeLists.txt  UIBackend.cpp  popup-client.cpp  popup-client.h  popup-runner.cpp
src/ui/popup-bin/: CMakeLists.txt  main.cpp  popup-service.cpp  popup-service.h  popup.cpp  popup.h
systemd/: CMakeLists.txt  cert-checker-popup.service.in  cert-checker-popup.socket.in  cert-checker.service  cert-checker.service.in  cert-checker.socket.in
tests/: CMakeLists.txt  app_event_operators.cpp  app_event_operators.h  certs_.cpp  certs_.h  colour_log_formatter.cpp  colour_log_formatter.h  dbfixture.cpp  dbfixture.h  logic_.cpp  logic_.h  main.cpp  popup_test.cpp  queue_test_thread.cpp  queue_test_thread.h  stubs_.cpp  test_app.cpp  test_certs.cpp  test_client.cpp  test_common.cpp  test_db.cpp  test_logic.cpp  test_queue.cpp
tests/files/app1/: author-signature.xml  signature1.xml
tests/files/app3/: signature1.xml
tests/files/app4/: author-signature.xml  signature1.xml
tests/files/app_2/: signature1.xml
